--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -5,7 +5,11 @@ dependencies:
   - Uniswap/uniswap-v3-periphery@1.0.0
 
 autofetch_sources: true
-
+dev_deployment_artifacts: true
+networks:
+  mainnet-fork:
+    cmd_settings:
+      chain_id: 1337
 compiler:
   solc:
     version: 0.7.6
