--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.10",
-    "solhint-plugin-prettier": "0.0.5"
+    "solhint-plugin-prettier": "0.0.5",
+    "typescript": "^4.5.3"
   }
 }
