--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,13 +23,8 @@
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "prepare": "cd .. && node frontend/node_modules/husky/lib/bin.js install frontend/.husky"
   },
   "browserslist": {
     "production": [
@@ -44,6 +39,14 @@
     ]
   },
   "devDependencies": {
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.3"
+  },
+  "lint-staged": {
+    "*.+(js|jsx|ts)": "tslint -c tslint.json --fix",
+    "*.+(json|css|md|js|jsx|ts)": "prettier --write"
   }
 }
