setup ETHERSCAN_TOKEN token

--- a/.github/workflows/deploy-ropsten.yml
+++ b/.github/workflows/deploy-ropsten.yml
@@ -34,8 +34,6 @@ jobs:
         brownie pm install Uniswap/v3-core@1.0.0
     - name: Set infura key
       run: export WEB3_INFURA_PROJECT_ID=${{ secrets.INFURA_PROJECT_ID }}
-    - name: Set etherscan key
-      run: export ETHERSCAN_TOKEN=${{ secrets.ETHERSCAN_TOKEN }}
     - name: Set network
       run: brownie networks add live infura host=https://ropsten.infura.io/v3/${{ secrets.INFURA_PROJECT_ID }} chainid=3 explorer=https://api-ropsten.etherscan.io/api
     - name: Setup deployment account
@@ -45,3 +43,5 @@ jobs:
         ${GITHUB_WORKSPACE}/.github/workflows/scripts/import_account.exp
     - name: Run deploy
       run: brownie run deploy_ropsten --network infura
+      env:
+        ETHERSCAN_TOKEN: ${{ secrets.ETHERSCAN_TOKEN }}
